apps/hash-graph/lib/query-builder-derive/tests/ui/fail/unknown_next.rs
use query_builder_derive::QueryBuilder;

#[derive(QueryBuilder)]
pub enum QueryPath {
    #[builder(next = "unknown")]
    Nested,
}

fn main() {}
